--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scalajs-scala-cli-template",
+  "name": "scala-platform-visualisation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,15 +7,18 @@
     "dev": "concurrently npm:watchScalajs vite",
     "build": "npm run buildScalajsRelease && vite build",
     "preview": "vite preview",
-    "watchScalajs": "scala-cli --power package . -w -f -o scalajs-frontend.js --js-module-kind es",
-    "buildScalajs": "scala-cli --power package . -f -o scalajs-frontend.js --js-module-kind es",
-    "buildScalajsRelease": "scala-cli --power package . -f -o scalajs-frontend.js --js-mode release --js-module-kind es"
+    "watchScalajs": "scala-cli --power package frontend -w -f -o scalajs-frontend.js --js-module-kind es",
+    "buildScalajs": "scala-cli --power package frontend -f -o scalajs-frontend.js --js-module-kind es",
+    "buildScalajsRelease": "scala-cli --power package frontend -f -o scalajs-frontend.js --js-mode release --js-module-kind es"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "concurrently": "^8.2.2"
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "tippy.js": "^6.3.7"
   }
 }
