--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently npm:watchScalajs vite",
     "build": "npm run buildScalajsRelease && vite build",
     "preview": "vite preview",
+    "buildForGithubPages": "npm run buildScalajsRelease && vite build --base=/scala-platform-visualisation",
     "watchScalajs": "scala-cli --power package frontend -w -f -o scalajs-frontend.js --js-module-kind es",
     "buildScalajs": "scala-cli --power package frontend -f -o scalajs-frontend.js --js-module-kind es",
     "buildScalajsRelease": "scala-cli --power package frontend -f -o scalajs-frontend.js --js-mode release --js-module-kind es"
